k8s/environments/jenkins/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    env: production
    tier: cicd
    app: jenkins
spec:
  rules:
    - host: <Jenkins 도메인> # TODO
    #- host: jenkins.192.168.100.64.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
